--- a/library.bib
+++ b/library.bib
@@ -924,7 +924,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
 
 @Article{Seeskin:Spencer:Effects:2015,
   author   = {Spencer, {Bruce David} and Seeskin, {Zachary H.}},
-  title    = {Effects of Census Accuracy on Apportionment of Congress and Allocations of Federal Funds},
+  title    = {Effects of {C}ensus Accuracy on Apportionment of {C}ongress and Allocations of Federal Funds},
   journal  = {JSM Proceedings, Government Statistics Section},
   year     = {2015},
   pages    = {3061--3075},
@@ -3145,7 +3145,7 @@ We provide a formal analysis of the error of query answers produced by the mecha
 
 @Article{Li2014,
   author        = {Li, Chao and Li, Daniel Yang and Miklau, Gerome and Suciu, D A N},
-  title         = {{A Theory of Pricing Private Data}},
+  title         = {A Theory of Pricing Private Data},
   journal       = {ACM Transactions on Database Systems},
   year          = {2014},
   volume        = {39},
@@ -4299,10 +4299,10 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 }
 
 @Book{groves:harris-kojetin:2017,
-  title     = {{Innovations in Federal Statistics: Combining Data Sources While Protecting Privacy}},
+  title     = {Innovations in Federal Statistics: Combining Data Sources While Protecting Privacy},
   publisher = {National Academies Press},
   year      = {2017},
-  author    = {{National Academies of Sciences, Engineering, and Medicine}},
+  author    = {National Academies of Sciences, Engineering, and Medicine},
   series    = {Committee on National Statistics},
   address   = {Washington, DC},
   isbn      = {978-0-309-45428-5},
@@ -4440,10 +4440,9 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 @InCollection{HaneySIGMOD2017,
   author    = {Samuel Haney and Ashwin Machanavajjhala and John M. Abowd and Matthew Graham and Mark Kutzbach and Lars Vilhuber},
   title     = {Utility Cost of Formal Privacy for Releasing National Employer-Employee Statistics},
-  booktitle = {Proceedings of the 2017 International Conference on Management of Data},
+  booktitle = {Proceedings of the 2017 {I}nternational {C}onference on {M}anagement of {D}ata},
   publisher = {ACM},
   year      = {2017},
-  volume    = {forthcoming},
   series    = {SIGMOD '17},
   abstract  = {National statistical agencies around the world publish tabular summaries based on combined employer-employee (ER-EE) data. The privacy of both individuals and business establishments that feature in these data are protected by law in most countries. These data are currently released using a variety of statistical disclosure limitation (SDL) techniques that do not reveal the exact characteristics of particular employers and employees, but lack provable privacy guarantees limiting inferential disclosures.
 	In this work, we present novel algorithms for releasing tabular summaries of linked ER-EE data with formal, provable guarantees of privacy. We show that state-of-the-art differentially private algorithms add too much noise for the output to be useful. Instead, we identify the privacy requirements mandated by current interpretations of the relevant laws, and formalize them using the Pufferfish framework. We then develop new privacy definitions that are customized to ER-EE data and satisfy the statutory privacy requirements. We implement the experiments in this paper on production data gathered by the U.S. Census Bureau. An empirical evaluation of utility for these data shows that for reasonable values of the privacy-loss parameter $\epsilon\geq$ 1, the additive error introduced by our provably private algorithms is comparable, and in some cases better, than the error introduced by existing SDL techniques that have no provable privacy guarantees. For some complex queries currently published, however, our algorithms do not have utility comparable to the existing traditional SDL algorithms. Those queries are fodder for future research.},
@@ -4853,7 +4852,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 @InProceedings{jorgensen:personalized:ICDE:2015,
   author    = {Z. Jorgensen and T. Yu and G. Cormode},
   title     = {Conservative or liberal? Personalized differential privacy},
-  booktitle = {2015 IEEE 31st International Conference on Data Engineering},
+  booktitle = {2015 {IEEE} 31st {I}nternational {C}onference on {D}ata {E}ngineering},
   year      = {2015},
   pages     = {1023-1034},
   month     = {4},
@@ -5566,7 +5565,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
 
 @Misc{jones:2017,
   author       = {Christa Jones},
-  title        = {Nonconfidential Memorandum on Census Bureau Privacy Breaches},
+  title        = {Nonconfidential Memorandum on {C}ensus {B}ureau Privacy Breaches},
   howpublished = {Memorandum to file},
   month        = jun,
   year         = {2017},
