--- a/library.bib
+++ b/library.bib
@@ -16,7 +16,7 @@
  publisher = {ACM},
  address = {New York, NY, USA},
  keywords = {axioms, privacy, utility, value of privacy, data unions},
-} 
+}
 
 @Book{GolubVanLoan:MatrixComputations:1996,
   title     = {Matrix Computations, Third Edition},
@@ -97,7 +97,7 @@ eprint = {
   title    = {Differential Privacy: A Primer for a Non-Technical Audience},
   journal  = {Privacy Law Scholars Conference 2017},
   year     = {2018},
-  
+
   keywords = {formal privacy, background},
   url      = {https://openscholar.mit.edu/sites/default/files/dept/files/nissim_et_al_-_differential_privacy_primer_for_non-technical_audiences_1.pdf},
 }
@@ -139,7 +139,7 @@ This primer seeks to introduce the concept of differential privacy and its priva
   journal  = {arXiv},
   year     = {2018},
   url      = {https://arxiv.org/abs/1808.03537},
-  
+
   keywords = {formal privacy},
 }
 @article{McKenna:2018:OEH:3231751.3242939,
@@ -158,7 +158,7 @@ This primer seeks to introduce the concept of differential privacy and its priva
  doi = {10.14778/3231751.3231769},
  acmid = {3242939},
  publisher = {VLDB Endowment},
-} 
+}
 
 @Article{Ding:Telemetry:NIPS:2017,
   author   = {Ding, Bolin and Kulkarni, Janardhan and Yekhanin, Sergey},
@@ -179,7 +179,7 @@ This primer seeks to introduce the concept of differential privacy and its priva
   year     = {2017},
   volume   = {1},
   number   = {8},
-  
+
   keywords = {formal privacy},
   url      = {https://machinelearning.apple.com/2017/12/06/learning-with-privacy-at-scale.html},
 }
@@ -267,6 +267,7 @@ This primer seeks to introduce the concept of differential privacy and its priva
   author      = {Simson Garfinkel},
   title       = {De-{I}dentification of Personal Information},
   institution = {National Institute of Standards and Technology},
+  publisher = {National Institute of Standards and Technology},
   year        = {2015},
   type        = {Internal Report},
   number      = {8053},
@@ -928,7 +929,7 @@ url = {http://papers.nips.cc/paper/4902-information-theoretic-lower-bounds-for-d
   journal  = {JSM Proceedings, Government Statistics Section},
   year     = {2015},
   pages    = {3061--3075},
-  
+
   keywords = {value of data, primary},
   language = {English (US)},
   url      = {https://www.ipr.northwestern.edu/publications/papers/2015/ipr-wp-15-05.html},
@@ -1758,7 +1759,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
 @InProceedings{Dinur:2003:RIW:773153.773173,
   author    = {Dinur, Irit and Nissim, Kobbi},
   title     = {Revealing information while preserving privacy},
-  booktitle = {Proceedings of the Twenty-second ACM SIGMOD-SIGACT-SIGART Symposium on Principles of Database Systems},
+  booktitle = {Proceedings of the {T}wenty-second {ACM} {SIGMOD}-{SIGACT}-{SIGART} {S}ymposium on {P}rinciples of {D}atabase {S}ystems},
   year      = {2003},
   series    = {PODS '03},
   pages     = {202--210},
@@ -1814,7 +1815,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   keywords  = {statistical disclosure limitation, SDL},
   owner     = {John Abowd},
   timestamp = {2014.12.19},
-  
+
 }
 
 @Article{Duncan:Risk:JBES:1989,
@@ -1880,7 +1881,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
   keywords     = {statistical disclosure limitation, SDL},
   owner        = {John Abowd},
   timestamp    = {2014.12.19},
-  
+
 }
 
 @Book{Duncan1993,
@@ -2013,7 +2014,7 @@ should be a standard part of algorithms courses, like "divide and conquer."},
 @InProceedings{Dworketal:2006,
   author    = {Dwork, Cynthia and McSherry, Frank and Nissim, Kobbi and Smith, Adam},
   title     = {{Calibrating Noise to Sensitivity in Private Data Analysis}},
-  booktitle = {Proceedings of the Third conference on Theory of Cryptography},
+  booktitle = {Proceedings of the {T}hird conference on {T}heory of {C}ryptography},
   year      = {2006},
   series    = {TCC06},
   pages     = {265--284},
@@ -2642,7 +2643,7 @@ isbn="978-3-642-31680-7"
 @InProceedings{Gupta:2012:ICP:2238936.2238961,
   author    = {Gupta, Anupam and Roth, Aaron and Ullman, Jonathan},
   title     = {Iterative constructions and private data release},
-  booktitle = {Proceedings of the 9th International Conference on Theory of Cryptography},
+  booktitle = {Proceedings of the 9th {I}nternational {C}onference on {T}heory of {C}ryptography},
   year      = {2012},
   series    = {TCC12},
   pages     = {339--356},
@@ -2663,7 +2664,7 @@ isbn="978-3-642-31680-7"
 @Article{Gupta2012,
   author        = {Gupta, Anupam and Roth, Aaron and Ullman, Jonathan},
   title         = {{Iterative constructions and private data release}},
-  journal       = {Lecture Notes in Computer Science (including subseries Lecture Notes in Artificial Intelligence and Lecture Notes in Bioinformatics)},
+  journal       = {Lecture Notes in Computer Science},
   year          = {2012},
   volume        = {7194 LNCS},
   pages         = {339--356},
@@ -2679,21 +2680,8 @@ isbn="978-3-642-31680-7"
   url           = {https://link.springer.com/chapter/10.1007%2F978-3-642-28914-9_19},
 }
 
-@Article{gupta:2011:wp,
-  author    = {Anupam Gupta and Aaron Roth and Jonathan Ullman},
-  title     = {Iterative constructions and private data release},
-  journal   = {CoRR},
-  year      = {2011},
-  volume    = {abs/1107.3731},
-  bibsource = {dblp computer science bibliography, http://dblp.org},
-  biburl    = {http://dblp.uni-trier.de/rec/bib/journals/corr/abs-1107-3731},
-  doi       = {10.1007/978-3-642-28914-9_19},
-  owner     = {vilhuber},
-  timestamp = {Mon, 05 Dec 2011 18:05:10 +0100},
-  url       = {https://link.springer.com/chapter/10.1007%2F978-3-642-28914-9_19},
-  xurlx     = {http://arxiv.org/abs/1107.3731},
-}
 
+%% was also: gupta:2011:wp,
 @Article{Gupta2011,
   author        = {Gupta, Anupam and Roth, Aaron and Ullman, Jonathan},
   title         = {{Iterative Constructions and Private Data Release}},
@@ -2926,7 +2914,7 @@ isbn="978-3-642-31680-7"
   journal  = {ArXiv},
   year     = {2015},
   abstract = {We present a Bayesian model for estimating the joint distribution of multivariate categorical data when units are nested within groups. Such data arise frequently in social science settings, for example, people living in households. The model assumes that (i) each group is a member of a group-level latent class, and (ii) each unit is a member of a unit-level latent class nested within its group-level latent class. This structure allows the model to capture dependence among units in the same group. It also facilitates simultaneous modeling of variables at both group and unit levels. We develop a version of the model that assigns zero probability to groups and units with physically impossible combinations of variables. We apply the model to estimate multivariate relationships in a subset of the American Community Survey. Using the estimated model, we generate synthetic household data that could be disseminated as redacted public use files with high analytic validity and low disclosure risks. Supplementary materials for this article are available online.},
-  
+
   keywords = {statistical disclosure limitation, SDL},
   url      = {http://arxiv.org/abs/1412.2282v3},
 }
@@ -4298,7 +4286,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   url   = {http://www.apple.com/newsroom/2016/06/apple-previews-ios-10-biggest-ios-release-ever.html},
 }
 
-@Book{groves:harris-kojetin:2017,
+@Book{groves:harris-kojetin:2017:orig,
   title     = {Innovations in Federal Statistics: Combining Data Sources While Protecting Privacy},
   publisher = {National Academies Press},
   year      = {2017},
@@ -4310,6 +4298,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   keywords  = {official statistics, primary},
   url       = {https://www.nap.edu/catalog/24652/innovations-in-federal-statistics-combining-data-sources-while-protecting-privacy},
 }
+
 
 @Article{Wasserstein:pvalue:ASA:2016,
   author  = {Ronald L. Wasserstein and Nicole A. Lazar},
@@ -5604,7 +5593,7 @@ url="https://doi.org/10.1007/978-1-4757-3575-8_9"
   year     = {2016},
   month    = {12},
   note     = {\url{https://digitalcommons.ilr.cornell.edu/ldi/32/}},
-  
+
   keywords = {Official Statistics, primary},
   url      = {https://digitalcommons.ilr.cornell.edu/ldi/32/},
 }
