Added Kifer and Machanavajjhala Comm. of ACM piece

--- a/library.bib
+++ b/library.bib
@@ -1,5 +1,25 @@
 % Encoding: ISO-8859-1
 
+@article{Machanavajjhala:2015:DSP:2739250.2660766,
+ author = {Machanavajjhala, Ashwin and Kifer, Daniel},
+ title = {Designing Statistical Privacy for Your Data},
+ journal = {Communications of the ACM},
+ issue_date = {March 2015},
+ volume = {58},
+ number = {3},
+ month = feb,
+ year = {2015},
+ issn = {0001-0782},
+ pages = {58--67},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2660766},
+ doi = {10.1145/2660766},
+ acmid = {2660766},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {formal privacy, primary}
+} 
+
 @inproceedings{Kifer:2010:TAS:1807085.1807106,
  author = {Kifer, Daniel and Lin, Bing-Rong},
  title = {Towards an Axiomatization of Statistical Privacy and Utility},
