--- a/primary-manual.bib
+++ b/primary-manual.bib
@@ -259,7 +259,7 @@
   year      = {1977},
   volume    = {15},
   pages     = {429--444},
-  doi       = {10.1145/320613.320616},
+  url       = {https://archives.vrdc.cornell.edu/info7470/2011/Readings/dalenius-1977.pdf},
   keywords  = {statistical disclosure limitation, SDL, primary},
   owner     = {vilhuber},
   timestamp = {2016.08.30},
